<resources>
    <string name="app_name">MathAlarm</string>
    <string name="add_alarm">Добавить будильник</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <string name="sunday">Вс</string>
    <string name="level_alarm_settings">Уровень</string>
    <string name="music">Мелодия</string>
    <string name="count_of_examples">Количество примеров</string>
    <string name="cancel">отмена</string>
    <string name="save">сохранить</string>
    <string name="level_easy">Легкий</string>
    <string name="level_normal">Средний</string>
    <string name="level_hard">Сложный</string>
    <string name="level_pro">Продвинутый</string>
    <string name="vibration">Вибрация</string>
    <string name="notification_text">Нажмите для отключения будильника</string>
    <string name="title_change_do_not_disturb">Изменение режима не беспокоить</string>
    <string name="message_change_do_not_disturb">Предоставте развершение на изменение режима не беспокоить приложению.</string>
    <string name="dialog_fragment_cancel">отмена</string>
    <string name="dialog_fragment_accept">ок</string>
    <string name="select_ringtone_for_alarm">Выберите мелодию для будильника</string>
</resources>