<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/setting_background_color"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_time_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/for_number_color"
            android:textSize="38sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="09:00" />

        <TextView
            style="@style/MyTextView"
            android:id="@+id/tv_monday"
            android:layout_marginStart="39dp"
            android:text="@string/monday"
            app:layout_constraintBottom_toBottomOf="@+id/tv_time_item"
            app:layout_constraintStart_toEndOf="@+id/tv_time_item"
            app:layout_constraintTop_toTopOf="@+id/tv_time_item" />

        <TextView
            style="@style/MyTextView"
            android:id="@+id/tv_tuesday"
            android:layout_marginStart="7dp"
            android:text="@string/tuesday"
            app:layout_constraintBottom_toBottomOf="@+id/tv_monday"
            app:layout_constraintStart_toEndOf="@+id/tv_monday"
            app:layout_constraintTop_toTopOf="@+id/tv_monday" />

        <TextView
            style="@style/MyTextView"
            android:id="@+id/tv_wednesday"
            android:layout_marginStart="7dp"
            android:text="@string/wednesday"
            app:layout_constraintBottom_toBottomOf="@+id/tv_tuesday"
            app:layout_constraintStart_toEndOf="@+id/tv_tuesday"
            app:layout_constraintTop_toTopOf="@+id/tv_tuesday" />

        <TextView
            style="@style/MyTextView"
            android:id="@+id/tv_thursday"
            android:layout_marginStart="7dp"
            android:text="@string/thursday"
            app:layout_constraintBottom_toBottomOf="@+id/tv_wednesday"
            app:layout_constraintStart_toEndOf="@+id/tv_wednesday"
            app:layout_constraintTop_toTopOf="@+id/tv_wednesday" />

        <TextView
            style="@style/MyTextView"
            android:id="@+id/tv_friday"
            android:layout_marginStart="7dp"
            android:text="@string/friday"
            app:layout_constraintBottom_toBottomOf="@+id/tv_thursday"
            app:layout_constraintStart_toEndOf="@+id/tv_thursday"
            app:layout_constraintTop_toTopOf="@+id/tv_thursday" />

        <TextView
            style="@style/MyTextView"
            android:id="@+id/tv_saturday"
            android:layout_marginStart="7dp"
            android:text="@string/saturday"
            app:layout_constraintBottom_toBottomOf="@+id/tv_friday"
            app:layout_constraintStart_toEndOf="@+id/tv_friday"
            app:layout_constraintTop_toTopOf="@+id/tv_friday" />

        <TextView
            style="@style/MyTextView"
            android:id="@+id/tv_sunday"
            android:layout_marginStart="7dp"
            android:text="@string/sunday"
            app:layout_constraintBottom_toBottomOf="@+id/tv_saturday"
            app:layout_constraintStart_toEndOf="@+id/tv_saturday"
            app:layout_constraintTop_toTopOf="@+id/tv_saturday" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/alarm_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:checked="true"
            app:layout_constraintBottom_toBottomOf="@+id/tv_time_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_time_item"
            app:thumbTint="@color/for_number_color"
            app:trackTint="@color/switch_color_selector" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>